--- a/style.css
+++ b/style.css
@@ -286,7 +286,7 @@ a:hover, a:active {
     line-height: 1.8;
 }
 
-.hero-content-overlay .entry-footer a.btn {
+.hero-content-overlay .entry--Aer a.btn {
     color: #fff;
 }
 
@@ -632,7 +632,10 @@ ul.tabs-nav .tab-nav.active {
 # Icon Box
 ----------------------------------*/
 .icon-box {
-    padding: 40px;
+    padding-top: 40px;
+	padding-bottom: 25px;
+	padding-left: 40px;
+	padding-right: 40px;
     border-radius: 24px;
     background: #ecf2f5;
     text-align: center;
@@ -2042,7 +2045,59 @@ ul.tabs-nav .tab-nav.active {
     color: #ff5a00;
 }
 
+
+
+.footer-widgetsq {
+    position: relative;
+    padding: 96px 0 90px;
+    font-weight: 500;
+    background: url("") no-repeat center;
+    background-size: cover;
+    z-index: 99;
+}
+
+.footer-widgetsq::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 101%;
+    background: rgba(22,22,22,.92);
+}
+
+.footer-widgetsq h2 {
+    margin-bottom: 40px;
+    font-size: 18px;
+    color: #fff;
+}
+
+.footer-widgetsq ul {
+    padding: 12px 0 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer-widgetsq ul li {
+    margin-bottom: 8px;
+    font-size: 14px;
+}
+
+.footer-widgetsq ul li a {
+    color: #a2a1a1;
+    text-decoration: none;
+}
+
+.footer-widgetsq ul li a:hover {
+    color: #ff5a00;
+}
+
+
+
+
 .foot-about p {
+	
     font-size: 14px;
     line-height: 2;
     color: #929191;
@@ -2050,6 +2105,7 @@ ul.tabs-nav .tab-nav.active {
 
 .foot-about ul li {
     margin-right: 28px;
+	
 }
 
 .foot-about ul li a {
